--- a/Excercise/.gitignore
+++ b/Excercise/.gitignore
@@ -30,3 +30,27 @@
 *.exe
 *.out
 *.app
+
+#Image
+*.png
+*.jpg
+*.bmp
+
+#SDL
+*.dll
+*.cmake
+*.orig
+*.h
+*.txt
+
+#other
+*.pdb
+*.idb
+*.ilk
+*.recipe
+*.tlog
+*.lastbuildstate
+*.filters
+*.vcxproj
+*.user
+
